
plugins {
    id 'java'
    id 'org.jetbrains.kotlin.jvm'
    id "me.champeau.jmh" version "0.7.2"
}

group = 'org.example'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation("net.openhft:chronicle-bytes:2.27ea5")
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"

    testImplementation("junit:junit:4.13.2")

    jmh("org.openjdk.jmh:jmh-core:1.37")
    jmhAnnotationProcessor("org.openjdk.jmh:jmh-generator-annprocess:1.37")
}

test {
    useJUnitPlatform()
}

jmh {
    fork.set(1)
    warmupIterations.set(5)
    iterations.set(10)
    // 你的 Unsafe/反射所需 --add-opens
   /* jvmArgsAppend.addAll(
            "--add-opens=java.base/java.lang=ALL-UNNAMED",
            "--add-opens=jdk.unsupported/sun.misc=ALL-UNNAMED"
    )*/
    // 可选：GC/栈采样
    profilers.addAll("gc")
}

kotlin {
    jvmToolchain(8)
}